feat: integrar checkout desde carrito